# Clustering-Segmentation

1_Segmentation_Client_Retail_Kmeans/: README.md  pyproject.toml  requirements.txt
1_Segmentation_Client_Retail_Kmeans/notebooks/: projet_retail.ipynb
2_Gestion_infrastructure_taxis_DBSCAN/: pyproject.toml  requirements.txt
2_Gestion_infrastructure_taxis_DBSCAN/notebook/: taxi.ipynb
3_Notation_macroéconomique_pays/: README.md  pyproject.toml  requirements.txt
3_Notation_macroéconomique_pays/data/: data.csv
3_Notation_macroéconomique_pays/notekooks/: pays.ipynb
4_Optimisation_des_prix_hôteliers/: pyproject.toml  readme.md
4_Optimisation_des_prix_hôteliers/data/: Pricing.xlsx
4_Optimisation_des_prix_hôteliers/notebook/: pricing.ipynb
4_Optimisation_des_prix_hôteliers/src/: visualisation.py
Extraction_automatique_palette/: pyproject.toml
Retail/: pyproject.toml
